# jflib

./: .bumpversion.cfg  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  README_template.rst  command-watcher_hblock.py  command-watcher_texlive_update.py  pyproject.toml  setup.cfg  setup.py  tox.ini
doc/: requirements.txt
doc/source/: command_watcher.rst  conf.py  config_reader.rst  index.rst  send_nsca.rst
docs/: conf.py  requirements.txt  small_modules.rst
jflib/: __init__.py  _version.py  argparser_to_readme.py  capturing.py  command_watcher.py  config_reader.py  configurator.py  icinga.py  icinga_api.py  send_email.py  send_nsca.py  termcolor.py  utils.py
test/: config.ini  test_capturing.py  test_command_watcher.py  test_config_reader.py  test_configurator.py  test_init.py  test_send_email.py  test_utils.py
test/files/: config.ini  email.ini  exit-2.sh  stderr.sh  stdout.sh  types.ini
test/files/command_watcher/: conf.ini
tests/: test_capturing.py  test_command_watcher.py  test_config_reader.py  test_init.py  test_send_email.py  test_utils.py
tests/files/: integration.ini  stdout-stderr-while.sh
