[tool.poetry]
name = "jflib"
version = "1.0.0"
description = "A collection of my Python library snippets. Maybe they are useful for someone else."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Josef-Friedrich/jflib"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "4.3.0"
requests = "2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
